[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/game_character_select/scripts/character_select.gd" type="Script" id=1]
[ext_resource path="res://scenes/game_character_select/dungeon_tiles.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/doors/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/doors/sprites/door_3.png" type="Texture" id=4]
[ext_resource path="res://entities/doors/sprites/door_1.png" type="Texture" id=5]
[ext_resource path="res://ui/ui_resources/animated_fonts/animated_font.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/fonts/m3x6.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://entities/warrior/warrior.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/elf/elf.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/wizard/wizard.tscn" type="PackedScene" id=10]
[ext_resource path="res://entities/containers/chest/container.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 7 )

[node name="character_select" type="Node2D"]
script = ExtResource( 1 )

[node name="edge_tiles" parent="." instance=ExtResource( 2 )]
position = Vector2( -224, -112 )
scale = Vector2( 4, 4 )
cell_tile_origin = 1
cell_y_sort = true
collision_mask = 2
tile_data = PoolIntArray( -196611, 6, 0, -196610, 6, 1, -196609, 6, 1, -262144, 6, 1, -262143, 6, 1, -262142, 6, 1, -262141, 6, 1, -262140, 6, 1, -262139, 6, 1, -262138, 6, 1, -262137, 6, 1, -262136, 6, 2, -131075, 6, 65536, -131074, 6, 65537, -131073, 6, 65537, -196608, 6, 65537, -196607, 6, 65537, -196606, 6, 65537, -196605, 6, 65537, -196604, 6, 65537, -196603, 6, 65537, -196602, 6, 65537, -196601, 6, 65537, -196600, 6, 65538, -65539, 6, 65536, -65538, 6, 65537, -65537, 6, 65537, -131072, 6, 65537, -131071, 6, 65537, -131070, 6, 65537, -131069, 6, 65537, -131068, 6, 65537, -131067, 6, 65537, -131066, 6, 65537, -131065, 6, 65537, -131064, 6, 65538, -3, 6, 65536, -2, 6, 65537, -1, 6, 65537, -65536, 6, 65537, -65535, 6, 65537, -65534, 6, 65537, -65533, 6, 65537, -65532, 6, 65537, -65531, 6, 65537, -65530, 6, 65537, -65529, 6, 65537, -65528, 6, 65538, 65533, 6, 65536, 65534, 6, 65537, 65535, 6, 65537, 0, 6, 65537, 1, 6, 65537, 2, 6, 65537, 3, 6, 65537, 4, 6, 65537, 5, 6, 65537, 6, 6, 65537, 7, 6, 65537, 8, 6, 65538, 131069, 6, 65536, 131070, 6, 65537, 131071, 6, 65537, 65536, 6, 65537, 65537, 6, 65537, 65538, 6, 65537, 65539, 6, 65537, 65540, 6, 65537, 65541, 6, 65537, 65542, 6, 65537, 65543, 6, 65537, 65544, 6, 65538, 196605, 6, 65536, 196606, 6, 65537, 196607, 6, 65537, 131072, 6, 65537, 131073, 6, 65537, 131074, 6, 65537, 131075, 6, 65537, 131076, 6, 65537, 131077, 6, 65537, 131078, 6, 65537, 131079, 6, 65537, 131080, 6, 65538, 262141, 6, 65536, 262142, 6, 65537, 262143, 6, 65537, 196608, 6, 65537, 196609, 6, 65537, 196610, 6, 65537, 196611, 6, 65537, 196612, 6, 65537, 196613, 6, 65537, 196614, 6, 65537, 196615, 6, 65537, 196616, 6, 65538, 327677, 6, 65536, 327678, 6, 65537, 327679, 6, 65537, 262144, 6, 65537, 262145, 6, 65537, 262146, 6, 65537, 262147, 6, 65537, 262148, 6, 65537, 262149, 6, 65537, 262150, 6, 65537, 262151, 6, 65537, 262152, 6, 65538, 393213, 6, 65536, 393214, 6, 65537, 393215, 6, 65537, 327680, 6, 65537, 327681, 6, 65537, 327682, 6, 65537, 327683, 6, 65537, 327684, 6, 65537, 327685, 6, 65537, 327686, 6, 65537, 327687, 6, 65537, 327688, 6, 65538, 458749, 6, 131072, 458750, 6, 131073, 458751, 6, 131073, 393216, 6, 131073, 393217, 6, 131073, 393218, 6, 131073, 393219, 6, 131073, 393220, 6, 131073, 393221, 6, 131073, 393222, 6, 131073, 393223, 6, 131073, 393224, 6, 131074 )

[node name="wall_tiles" parent="." instance=ExtResource( 2 )]
position = Vector2( -224, -112 )
scale = Vector2( 4, 4 )
cell_tile_origin = 1
collision_mask = 2
tile_data = PoolIntArray( -131074, 2, 0, -131073, 2, 0, -196607, 2, 0, -196606, 2, 0, -196605, 2, 0, -196604, 2, 2, -196603, 2, 0, -196601, 2, 0 )

[node name="floor_tiles" parent="." instance=ExtResource( 2 )]
position = Vector2( -224, -112 )
scale = Vector2( 4, 4 )
cell_tile_origin = 1
cell_y_sort = true
collision_layer = 2
tile_data = PoolIntArray( -196611, 1, 0, -196610, 1, 0, -196609, 1, 0, -262144, 1, 0, -262143, 1, 0, -262142, 1, 0, -262141, 1, 0, -262140, 1, 0, -262139, 1, 0, -262138, 1, 0, -262137, 1, 0, -262136, 1, 0, -131075, 1, 0, -65539, 1, 0, -65538, 4, 0, -65537, 4, 1, -131072, 4, 1, -131071, 4, 1, -131070, 4, 1, -131069, 4, 1, -131068, 4, 1, -131067, 4, 1, -131066, 4, 1, -131065, 4, 2, -131064, 1, 0, -3, 1, 65536, -2, 4, 65536, -1, 4, 65537, -65536, 4, 65537, -65535, 4, 65537, -65534, 4, 65537, -65533, 4, 65537, -65532, 4, 65537, -65531, 4, 65537, -65530, 4, 65537, -65529, 4, 65538, -65528, 1, 65538, 65533, 1, 65536, 65534, 4, 65536, 65535, 4, 65537, 0, 4, 65537, 1, 4, 65537, 2, 4, 65537, 3, 4, 65537, 4, 4, 65537, 5, 4, 65537, 6, 4, 65537, 7, 4, 65538, 8, 1, 65538, 131069, 1, 65536, 131070, 4, 65536, 131071, 4, 65537, 65536, 4, 65537, 65537, 4, 65537, 65538, 4, 65537, 65539, 4, 65537, 65540, 4, 65537, 65541, 4, 65537, 65542, 4, 65537, 65543, 4, 65538, 65544, 1, 65538, 196605, 1, 65536, 196606, 4, 65536, 196607, 4, 65537, 131072, 4, 65537, 131073, 4, 65537, 131074, 4, 65537, 131075, 4, 65537, 131076, 4, 65537, 131077, 4, 65537, 131078, 4, 65537, 131079, 4, 65538, 131080, 1, 65538, 262141, 1, 65536, 262142, 4, 65536, 262143, 4, 65537, 196608, 4, 65537, 196609, 4, 65537, 196610, 4, 65537, 196611, 4, 65537, 196612, 4, 65537, 196613, 4, 65537, 196614, 4, 65537, 196615, 4, 65538, 196616, 1, 65538, 327677, 1, 65536, 327678, 4, 65536, 327679, 4, 65537, 262144, 4, 65537, 262145, 4, 65537, 262146, 4, 65537, 262147, 4, 65537, 262148, 4, 65537, 262149, 4, 65537, 262150, 4, 65537, 262151, 4, 65538, 262152, 1, 65538, 393213, 1, 65536, 393214, 4, 131072, 393215, 4, 131073, 327680, 4, 131073, 327681, 4, 131073, 327682, 4, 131073, 327683, 4, 131073, 327684, 4, 131073, 327685, 4, 131073, 327686, 4, 131073, 327687, 4, 131074, 327688, 1, 65538, 458749, 1, 131072, 458750, 1, 131073, 458751, 1, 131073, 393216, 1, 131073, 393217, 1, 131073, 393218, 1, 131073, 393219, 1, 131073, 393220, 1, 131073, 393221, 1, 131073, 393222, 1, 131073, 393223, 1, 131073, 393224, 1, 131074 )

[node name="to_exit" parent="." instance=ExtResource( 3 )]
position = Vector2( 224, -241 )
scale = Vector2( 4, 4 )
sprite = ExtResource( 4 )

[node name="to_start_game" parent="." instance=ExtResource( 3 )]
position = Vector2( -160, -241 )
scale = Vector2( 4, 4 )
sprite = ExtResource( 5 )

[node name="text_start" parent="." instance=ExtResource( 6 )]
margin_left = -184.0
margin_top = -280.0
margin_right = -134.0
margin_bottom = -249.0
text = "Start"

[node name="text_instructions" type="Label" parent="."]
margin_left = -286.0
margin_top = -347.0
margin_right = 14.0
margin_bottom = -294.0
custom_fonts/font = SubResource( 1 )
text = "Select A Character!"

[node name="warrior" parent="." instance=ExtResource( 8 )]
position = Vector2( -86, -1 )
collision_mask = 5
speed = 250

[node name="elf" parent="." instance=ExtResource( 9 )]
position = Vector2( 27, -4 )
collision_mask = 5
max_mana = 10
mana = 10
strength = 5
magic = 5
agility = 5
speed = 250

[node name="wizard" parent="." instance=ExtResource( 10 )]
position = Vector2( 162, -4 )
collision_mask = 5
speed = 250

[node name="Warrior" parent="." instance=ExtResource( 6 )]
margin_left = 210.0
margin_top = -280.0
margin_right = 245.0
margin_bottom = -249.0
text = "Exit"

[node name="container" parent="." instance=ExtResource( 11 )]
position = Vector2( 0, -172 )
[connection signal="entity_entered" from="to_exit" to="." method="_on_to_exit_entity_entered" flags=6]
[connection signal="entity_entered" from="to_start_game" to="." method="_on_to_start_game_entity_entered" flags=6]
[connection signal="input_event" from="warrior" to="." method="_on_warrior_input_event"]
[connection signal="mouse_entered" from="warrior" to="." method="_on_warrior_mouse_entered"]
[connection signal="input_event" from="elf" to="." method="_on_elf_input_event"]
[connection signal="input_event" from="wizard" to="." method="_on_wizard_input_event"]
